Fix Windows Build
Fix Windows Build
Upgraded to v8 to same 9.7.37 version as Linux/Mac
Static Link
Build v8_monolith

--- a/.gitignore
+++ b/.gitignore
@@ -29,18 +29,25 @@ plv8-*.zip
 /contrib/web/index.html
 
 # For MSVC
-/windows/*.vcxproj
-/windows/*.vcxproj.filters
-/windows/*.sln
-/windows/CMakeCache.txt
-/windows/CMakeFiles
-/windows/Release
-/windows/cmake_install.cmake
-/windows/libplv8.dir
-/windows/vendor
-/windows/x64
-/windows/CPackConfig.cmake
-/windows/CPackSourceConfig.cmake
-/windows/_CPack_Packages
-/windows/install_manifest.txt
-/windows/plv8*.zip
+/platforms/windows/*.vcxproj
+/platforms/windows/*.vcxproj.filters
+/platforms/windows/*.vcxproj.user
+/platforms/windows/*.control
+/platforms/windows/plv8_config.h
+/platforms/windows/*.sql
+/platforms/windows/*.sln
+/platforms/windows/CMakeCache.txt
+/platforms/windows/CMakeFiles
+/platforms/windows/Release
+/platforms/windows/Debug
+/platforms/windows/cmake_install.cmake
+/platforms/windows/libplv8.dir
+/platforms/windows/vendor
+/platforms/windows/x64
+/platforms/windows/CPackConfig.cmake
+/platforms/windows/CPackSourceConfig.cmake
+/platforms/windows/_CPack_Packages
+/platforms/windows/install_manifest.txt
+/platforms/windows/plv8*.zip
+/platforms/windows/plv8*.sql
+/platforms/windows/.vs
